# fastapi-mita-revamped

./: .env  .env.example  .pre-commit-config.yaml  Dockerfile  alembic.ini  compose.yaml  docker-compose.yaml  help.txt  main.py  pyproject.toml  todo.txt
app/: api.py  celery_tasks.py  config.py  logging.py  mail.py  main.py  models.py
app/alembic/: env.py
app/alembic/versions/: 19ed627e04f5_.py  e1ee7f7ef398_.py
app/auth/: models.py  schemas.py  service.py  views.py
app/database/: core.py
app/language/: service.py  shemas.py  views.py
